test/tests/ClassMethodOnInstance.expected
ClassMethodOnInstance.frost:13:9: error: cannot call class method anonymous.ClassMethodOnInstance.m1() on an instance
1 error
